--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Green day</string>
+    <string name="sing_up">Зарегестрироваться</string>
+    <string name="sing_in">Войти</string>
+    <string name="app_logo">app logo</string>
 </resources>
