--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Green day</string>
+    <string name="app_name">Recyclica</string>
     <string name="sing_up">Зарегестрироваться</string>
     <string name="sing_in">Войти</string>
     <string name="app_logo">app logo</string>
